force-app/main/default/objects/Lead/fields/Bairro_de_cobran_a__c.field-meta.xml
<CustomField>
    <fullName>Bairro_de_cobran_a__c</fullName>
    <label>Bairro de cobrança</label>
    <type>TextArea</type>
</CustomField>