force-app/main/default/objects/Lead/fields/ClassificacaoLead__c.field-meta.xml
<CustomField>
    <fullName>ClassificacaoLead__c</fullName>
    <formula>IF( ISBLANK(ValorEstimado__c), &quot;&quot;,
    IF( ValorEstimado__c &lt;= 50000, &quot;C&quot;,
        IF( ValorEstimado__c &lt;= 100000, &quot;B&quot;,
            IF( ValorEstimado__c &lt;= 500000, &quot;A&quot;,
                IF( ValorEstimado__c &lt;= 1000000, &quot;AA&quot;, &quot;AAA&quot;)
            )
        )
    )
)</formula>
    <inlineHelpText>Classificação com o base no valor estimado a ser investido.</inlineHelpText>
    <label>Classificação do lead</label>
    <type>Text</type>
</CustomField>