force-app/main/default/objects/Lead/fields/Complemento_de_cobran_a__c.field-meta.xml
<CustomField>
    <fullName>Complemento_de_cobran_a__c</fullName>
    <label>Complemento de cobrança</label>
    <type>TextArea</type>
</CustomField>