force-app/main/default/objects/Lead/fields/Data_de_abertura_PJ__c.field-meta.xml
<CustomField>
    <fullName>Data_de_abertura_PJ__c</fullName>
    <inlineHelpText>Caso a conta relacionada ao eu lead seja PJ, informe a data de abertura.</inlineHelpText>
    <label>Data de abertura PJ</label>
    <type>Date</type>
</CustomField>