force-app/main/default/objects/Lead/fields/DataPrevistaAporte__c.field-meta.xml
<CustomField>
    <fullName>DataPrevistaAporte__c</fullName>
    <label>Data Prevista do Aporte</label>
    <type>Date</type>
</CustomField>