force-app/main/default/objects/Lead/fields/DataStatusNovoAlterado__c.field-meta.xml
<CustomField>
    <fullName>DataStatusNovoAlterado__c</fullName>
    <label>Data Status Novo Alterado</label>
    <type>DateTime</type>
</CustomField>