force-app/main/default/objects/Lead/fields/DataUltimoContato__c.field-meta.xml
<CustomField>
    <fullName>DataUltimoContato__c</fullName>
    <label>Data do último contato</label>
    <type>Date</type>
</CustomField>