force-app/main/default/objects/Lead/fields/Devolucao__c.field-meta.xml
<CustomField>
    <fullName>Devolucao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devolução</label>
    <type>Checkbox</type>
</CustomField>