force-app/main/default/objects/Lead/fields/DiasStatusNovo__c.field-meta.xml
<CustomField>
    <fullName>DiasStatusNovo__c</fullName>
    <formula>CreatedDate - DataStatusNovoAlterado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias em status Novo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>