force-app/main/default/objects/Lead/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <inlineHelpText>Informe o CPF para Pessoa Física ou CNPJ para Pessoa Jurídica.</inlineHelpText>
    <label>Documento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>