force-app/main/default/objects/Lead/fields/Funcionario__c.field-meta.xml
<CustomField>
    <fullName>Funcionario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funcionário</label>
    <type>Checkbox</type>
</CustomField>