force-app/main/default/objects/Lead/fields/Id_formula__c.field-meta.xml
<CustomField>
    <fullName>Id_formula__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id formula</label>
    <type>Text</type>
</CustomField>