force-app/main/default/objects/Lead/fields/InicioContrato__c.field-meta.xml
<CustomField>
    <fullName>InicioContrato__c</fullName>
    <label>Início do contrato</label>
    <type>Date</type>
</CustomField>