force-app/main/default/objects/Lead/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>