force-app/main/default/objects/Lead/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empréstimo</fullName>
            </value>
            <value>
                <fullName>Imóvel</fullName>
            </value>
            <value>
                <fullName>Veículo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>