force-app/main/default/objects/Lead/fields/Numerodecobran_a__c.field-meta.xml
<CustomField>
    <fullName>Numerodecobran_a__c</fullName>
    <label>Número de cobrança</label>
    <type>TextArea</type>
</CustomField>