force-app/main/default/objects/Lead/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origem</label>
    <type>Checkbox</type>
</CustomField>