force-app/main/default/objects/Lead/fields/OrigemDevolucao__c.field-meta.xml
<CustomField>
    <fullName>OrigemDevolucao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origem e Devolução</label>
    <type>Checkbox</type>
</CustomField>