force-app/main/default/objects/Lead/fields/OrigemIndicacao__c.field-meta.xml
<CustomField>
    <fullName>OrigemIndicacao__c</fullName>
    <label>Origem da indicação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>