force-app/main/default/objects/Lead/fields/OrigemLead__c.field-meta.xml
<CustomField>
    <fullName>OrigemLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Origem: Lead</label>
    <type>Checkbox</type>
</CustomField>