force-app/main/default/objects/Lead/fields/Originador__c.field-meta.xml
<CustomField>
    <fullName>Originador__c</fullName>
    <label>Originador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Redes sociais</fullName>
            </value>
            <value>
                <fullName>Orgânico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>