force-app/main/default/objects/Lead/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <inlineHelpText>Preencher nos casos de empréstimo com veículo ou veículo pesado em garantia.</inlineHelpText>
    <label>Placa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>