force-app/main/default/objects/Lead/fields/PrazoContratacao__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratacao__c</fullName>
    <inlineHelpText>Em meses</inlineHelpText>
    <label>Prazo de contratação</label>
    <type>TextArea</type>
</CustomField>