force-app/main/default/objects/Lead/fields/PrazoOperacao__c.field-meta.xml
<CustomField>
    <fullName>PrazoOperacao__c</fullName>
    <inlineHelpText>Informar prazo em meses</inlineHelpText>
    <label>Prazo da operação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>