force-app/main/default/objects/Lead/fields/ProdutoNegociar__c.field-meta.xml
<CustomField>
    <fullName>ProdutoNegociar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto a negociar</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>