force-app/main/default/objects/Lead/fields/Restricao__c.field-meta.xml
<CustomField>
    <fullName>Restricao__c</fullName>
    <inlineHelpText>Preencher nos casos de empréstimo com veículo em garantia.</inlineHelpText>
    <label>Restrição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>