force-app/main/default/objects/Lead/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <label>RG</label>
    <length>12</length>
    <type>Text</type>
</CustomField>