force-app/main/default/objects/Lead/fields/Taxa__c.field-meta.xml
<CustomField>
    <fullName>Taxa__c</fullName>
    <label>Taxa</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>