force-app/main/default/objects/Lead/fields/TerminoContrato__c.field-meta.xml
<CustomField>
    <fullName>TerminoContrato__c</fullName>
    <label>Término do contrato</label>
    <type>Date</type>
</CustomField>