force-app/main/default/objects/Lead/fields/ValorBem__c.field-meta.xml
<CustomField>
    <fullName>ValorBem__c</fullName>
    <inlineHelpText>Informar o valor do veículo ou imóvel.</inlineHelpText>
    <label>Valor do bem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>