force-app/main/default/objects/Lead/fields/ValorEstimado__c.field-meta.xml
<CustomField>
    <fullName>ValorEstimado__c</fullName>
    <label>Valor estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>