force-app/main/default/objects/Lead/recordTypes/Investimentos.recordType-meta.xml
<RecordType>
    <fullName>Investimentos</fullName>
    <active>true</active>
    <businessProcess>Captação e investimentos</businessProcess>
    <label>Investimentos</label>
</RecordType>