force-app/main/default/objects/Lead/recordTypes/OperacoesEstruturadas.recordType-meta.xml
<RecordType>
    <fullName>OperacoesEstruturadas</fullName>
    <active>true</active>
    <businessProcess>Securitizadora</businessProcess>
    <label>Operações estruturadas</label>
</RecordType>