force-app/main/default/objects/Lead/recordTypes/ProdutosFinanceiros.recordType-meta.xml
<RecordType>
    <fullName>ProdutosFinanceiros</fullName>
    <active>true</active>
    <businessProcess>Securitizadora</businessProcess>
    <label>Produtos Financeiros</label>
</RecordType>