force-app/main/default/objects/Lead/recordTypes/ProdutosFinanceirosVeiculos.recordType-meta.xml
<RecordType>
    <fullName>ProdutosFinanceirosVeiculos</fullName>
    <active>true</active>
    <businessProcess>Securitizadora</businessProcess>
    <label>Produtos financeiros - Veículos</label>
</RecordType>