force-app/main/default/objects/Lead/validationRules/DeclinadoCaptacaoInvestimento.validationRule-meta.xml
<ValidationRule>
    <fullName>DeclinadoCaptacaoInvestimento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Declinado&quot;),
UnidadeNegocio__c  = &quot;Investimentos&quot;)</errorConditionFormula>
    <errorMessage>Para leads de Investimentos você deve selecionar a opção Sem Interesse.</errorMessage>
</ValidationRule>