force-app/main/default/objects/Lead/validationRules/DocumentoObrigatorioSecuritizadora.validationRule-meta.xml
<ValidationRule>
    <fullName>DocumentoObrigatorioSecuritizadora</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name == &quot;Securitizadora&quot;,
     ISBLANK(Documento__c)
)</errorConditionFormula>
    <errorMessage>Informe o documento do lead.</errorMessage>
</ValidationRule>