force-app/main/default/objects/Lead/validationRules/EmNegociacaoCaptacaoInvestimento.validationRule-meta.xml
<ValidationRule>
    <fullName>EmNegociacaoCaptacaoInvestimento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Em negociação&quot;),
  OR(
    ISBLANK( ValorEstimado__c ),
    ISBLANK(DataPrevistaAporte__c)
  )
)</errorConditionFormula>
    <errorMessage>Para avançar, preencha os campos &quot;Data Prevista do Aporte&quot; e &quot;Valor estimado de investimento&quot;</errorMessage>
</ValidationRule>