force-app/main/default/objects/Lead/validationRules/ImpedeRetornarStatusNovo.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeRetornarStatusNovo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Novo&quot;),
  NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Novo&quot;))
)</errorConditionFormula>
    <errorMessage>Não é possível retornar ao status &quot;Novo&quot;.</errorMessage>
</ValidationRule>