force-app/main/default/objects/Lead/validationRules/ImpedeRetrocederStatusConvertido.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeRetrocederStatusConvertido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(PRIORVALUE(Status), &quot;Convertido&quot;),
    NOT(ISPICKVAL(Status, &quot;Convertido&quot;))
)</errorConditionFormula>
    <errorMessage>Não é possível retroceder o status após convertido.</errorMessage>
</ValidationRule>