force-app/main/default/objects/Lead/validationRules/Justificativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Justificativa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status, &quot;Não Elegível&quot;),
    ISPICKVAL(Status, &quot;Sem interesse&quot;)
  ),
    ISBLANK(Justificativa__c)
)</errorConditionFormula>
    <errorMessage>Para avançar, preencha o campo &quot;Justificativa&quot;.</errorMessage>
</ValidationRule>