force-app/main/default/objects/Lead/validationRules/ObrigatoriedadeCampoEmpresa.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadeCampoEmpresa</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( TipoPessoa__c, &quot;Pessoa jurídica&quot;),
ISBLANK( Company ),
$Profile.Name  &lt;&gt; &quot;Salesforce API Only System Integrations&quot;
)</errorConditionFormula>
    <errorMessage>Favor informar o nome da Empresa do Lead.</errorMessage>
</ValidationRule>