force-app/main/default/objects/Lead/validationRules/ValidaPlacaRestricao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPlacaRestricao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ProdutoNegociar__r.Name == &apos;EMPRESTIMO C/GARANTIA VEICULOS&apos;,
OR(ISBLANK(Placa__c),
 ISPICKVAL(Restricao__c, &apos;&apos;)))</errorConditionFormula>
    <errorMessage>Para Empréstimo com veículo em garantia é necessário o preenchimento dos campos Placa e Restrição.</errorMessage>
</ValidationRule>