force-app/main/default/objects/Lead/validationRules/ValidarCNPJCaptacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCNPJCaptacao</fullName>
    <active>true</active>
    <errorConditionFormula>IF(LEN(Documento__c)=18,OR(AND( RecordType.Name = &apos;Captação e investimentos&apos;, Documento__c != null, MOD((
(VALUE(MID(Documento__c,1,1))*6)+
(VALUE(MID(Documento__c,2,1))*5)+
(VALUE(MID(Documento__c,4,1))*4)+
(VALUE(MID(Documento__c,5,1))*3)+
(VALUE(MID(Documento__c,6,1))*2)+
(VALUE(MID(Documento__c,8,1))*9)+
(VALUE(MID(Documento__c,9,1))*8)+
(VALUE(MID(Documento__c,10,1))*7)+
(VALUE(MID(Documento__c,12,1))*6)+
(VALUE(MID(Documento__c,13,1))*5)+
(VALUE(MID(Documento__c,14,1))*4)+
(VALUE(MID(Documento__c,15,1))*3)+
(VALUE(MID(Documento__c,17,1))*2))
,11)&lt;=1
,VALUE(MID(Documento__c,18,1))!=0)
,AND( RecordType.Name = &apos;Captação e investimentos&apos;, Documento__c != null,MOD((
(VALUE(MID(Documento__c,1,1))*6)+
(VALUE(MID(Documento__c,2,1))*5)+
(VALUE(MID(Documento__c,4,1))*4)+
(VALUE(MID(Documento__c,5,1))*3)+
(VALUE(MID(Documento__c,6,1))*2)+
(VALUE(MID(Documento__c,8,1))*9)+
(VALUE(MID(Documento__c,9,1))*8)+
(VALUE(MID(Documento__c,10,1))*7)+
(VALUE(MID(Documento__c,12,1))*6)+
(VALUE(MID(Documento__c,13,1))*5)+
(VALUE(MID(Documento__c,14,1))*4)+
(VALUE(MID(Documento__c,15,1))*3)+
(VALUE(MID(Documento__c,17,1))*2))
,11)&gt;1
,(11-MOD((
(VALUE(MID(Documento__c,1,1))*6)+
(VALUE(MID(Documento__c,2,1))*5)+
(VALUE(MID(Documento__c,4,1))*4)+
(VALUE(MID(Documento__c,5,1))*3)+
(VALUE(MID(Documento__c,6,1))*2)+
(VALUE(MID(Documento__c,8,1))*9)+
(VALUE(MID(Documento__c,9,1))*8)+
(VALUE(MID(Documento__c,10,1))*7)+
(VALUE(MID(Documento__c,12,1))*6)+
(VALUE(MID(Documento__c,13,1))*5)+
(VALUE(MID(Documento__c,14,1))*4)+
(VALUE(MID(Documento__c,15,1))*3)+
(VALUE(MID(Documento__c,17,1))*2)
),11
))!=VALUE(MID(Documento__c,18,1)))),false)</errorConditionFormula>
    <errorDisplayField>Documento__c</errorDisplayField>
    <errorMessage>Para o campo documento, digitar somente um CPF ou CNPJ válido. Não é possível salvar o campo somente com letras ou com uma sequência de mesmo número. Ex: 111111111-11.</errorMessage>
</ValidationRule>