force-app/main/default/objects/Lead/validationRules/ValidaTaxaMaxima.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaTaxaMaxima</fullName>
    <active>true</active>
    <description>O campo taxa, deve ter uma regra de validação que proíba uma taxa maior que 2% para Investimentos</description>
    <errorConditionFormula>AND ( UnidadeNegocio__c = &apos;Investimentos&apos;,
OR ( Taxa__c &lt; 0 , Taxa__c &gt; 2 )
)</errorConditionFormula>
    <errorDisplayField>Taxa__c</errorDisplayField>
    <errorMessage>A Taxa nao pode ter valor maior que 2%</errorMessage>
</ValidationRule>