force-app/main/default/objects/Lead/listViews/LeadsInvestimento.listView-meta.xml
<ListView>
    <fullName>LeadsInvestimento</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.RATING</columns>
    <columns>ValorEstimado__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Funcionario__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>DataPrevistaAporte__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Leads do meu Time</label>
</ListView>