force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>DataNascimento__c</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads</label>
</ListView>